Changed the tournament style readable and print

--- a/css/style.css
+++ b/css/style.css
@@ -659,6 +659,57 @@ table td {
   padding: 0.75em 0.75em;
 }
 
+table.tournament th {
+  color: #666f77;
+  font-size: 1em;
+  font-weight: 500;
+  padding: 0 0.75em 0.75em 0.75em;
+	vertical-align: bottom;
+  text-align: center;
+}
+table.tournament th span{
+  -ms-writing-mode: tb-rl;
+  -webkit-writing-mode: vertical-rl;
+  writing-mode: vertical-rl;
+  transform: rotate(180deg);
+  white-space: nowrap;
+	font-size: 1em;
+}
+table.tournament td.student{
+	font-size: 1em;
+	font-weight: 500;
+	min-width:8em;
+}
+table.tournament td{
+	padding: 0em;
+	text-align: center;
+}
+table.tournament input{
+	padding: 0em;
+	text-align: center;
+}
+table.tournament input[type="checkbox"]{
+	padding: 0em;
+	text-align: center;
+	display: inline;
+	margin-right: 0;
+	float: none;
+}
+
+@media print {
+	table.tournament tbody tr td {
+		border: solid 1px rgba(0, 0, 0, 1);
+	}
+
+	table.tournament thead {
+	  border-bottom: solid 2px rgba(0, 0, 0, 1);
+	}
+
+	table.tournament thead th {
+	  border: solid 2px rgba(0, 0, 0, 1);
+	}
+}
+
 table th {
   color: #666f77;
   font-size: 0.9em;
