--- a/css/style.css
+++ b/css/style.css
@@ -702,11 +702,18 @@ table.tournament input[type="checkbox"]{
 	}
 
 	table.tournament thead {
-	  border-bottom: solid 2px rgba(0, 0, 0, 1);
+	  border-bottom: solid 1px rgba(0, 0, 0, 1);
 	}
 
 	table.tournament thead th {
-	  border: solid 2px rgba(0, 0, 0, 1);
+	  border: solid 1px rgba(0, 0, 0, 1);
+	}
+
+	header img{
+		display:none;
+	}
+	section.wrapper {
+		padding: 0;
 	}
 }
 
