--- a/css/style.css
+++ b/css/style.css
@@ -331,6 +331,25 @@ input[type="radio"] {
   z-index: -1;
 }
 
+.scioly input[type="checkbox"],
+.scioly input[type="radio"] {
+  -moz-appearance: none;
+		-webkit-appearance: none;
+		-o-appearance: none;
+		-ms-appearance: none;
+		appearance: none;
+  display: block;
+  float: left;
+  margin-right: -2em;
+  /*opacity: 0;*/ //Wolfe uncommented to get rid of double box in checkbox; however, this causes boxes without labels to disappear - Perhaps use blank label for checkboxes
+  width: 1em;
+  z-index: -1;
+}
+
+input[type="checkbox"]:hover input{
+  background-color: #ccc;
+}
+
 input[type="checkbox"] + label,
 input[type="radio"] + label {
   text-decoration: none;
@@ -356,7 +375,7 @@ input[type="radio"] + label:before {
 
 input[type="checkbox"] + label:before,
 input[type="radio"] + label:before {
-  background: rgba(144, 144, 144, 0.075);
+  //background: rgba(144, 144, 144, 0.075);
   border-radius: 6px;
   border: solid 1px rgba(144, 144, 144, 0.25);
   content: "";
@@ -368,6 +387,9 @@ input[type="radio"] + label:before {
   text-align: center;
   top: 0;
   width: 1.65em;
+}
+input[type=checkbox][disabled] + label:before{
+	background: darkgray;
 }
 
 input[type="checkbox"]:checked + label:before,
