--- a/css/wolfestyle.css
+++ b/css/wolfestyle.css
@@ -1,7 +1,6 @@
 @charset "UTF-8";
-@import url(font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css?family=Roboto:500,300");
-@import url("font-awesome.min.css");
+@import url("all.min.css");
 
 body,
 input,
