--- a/css/wolfestyle.css
+++ b/css/wolfestyle.css
@@ -137,16 +137,17 @@ Max width before this PARTICULAR table gets nasty
 This query will take effect for any screen smaller than 760px
 and also iPads specifically.
 */
+/*
 @media
 only screen and (max-width: 760px),
 (min-device-width: 768px) and (max-device-width: 1024px)  {
 
-	/* Force table to not be like tables anymore */
+	// Force table to not be like tables anymore
 	table, thead, tbody, th, td, tr {
 		display: block;
 	}
 
-	/* Hide table headers (but not display: none;, for accessibility) */
+	// Hide table headers (but not display: none;, for accessibility)
 	thead tr {
 		position: absolute;
 		top: -9999px;
@@ -156,7 +157,7 @@ only screen and (max-width: 760px),
 	tr { border: 1px solid #ccc; }
 
 	td {
-		/* Behave  like a "row" */
+		// Behave  like a "row"
 		border: none;
 		border-bottom: 1px solid #eee;
 		position: relative;
@@ -164,9 +165,9 @@ only screen and (max-width: 760px),
 	}
 
 	td:before {
-		/* Now like a table header */
+		// Now like a table header
 		position: absolute;
-		/* Top/left values mimic padding */
+		// Top/left values mimic padding
 		top: 6px;
 		left: 6px;
 		width: 45%;
@@ -174,9 +175,8 @@ only screen and (max-width: 760px),
 		white-space: nowrap;
 	}
 
-	/*
-	Label the data
-	*/
+	// 	Label the data
+
 	td:nth-of-type(1):before { content: "Name"; }
 	td:nth-of-type(2):before { content: "Grade"; }
 	td:nth-of-type(3):before { content: "Job Title"; }
@@ -187,4 +187,5 @@ only screen and (max-width: 760px),
 	td:nth-of-type(8):before { content: "Dream Vacation City"; }
 	td:nth-of-type(9):before { content: "GPA"; }
 	td:nth-of-type(10):before { content: "Arbitrary Data"; }
+	*/
 }
