--- a/css/wolfestyle.css
+++ b/css/wolfestyle.css
@@ -193,3 +193,9 @@ only screen and (max-width: 760px),
   color: red;
 	text-shadow: 1px 1px #000000;
 }
+.slideImage{
+ height:360px; object-fit:cover;
+}
+.overlayText {
+	padding-top: 300px;
+}
