--- a/css/wolfestyle.css
+++ b/css/wolfestyle.css
@@ -199,3 +199,9 @@ only screen and (max-width: 760px),
 .overlayText {
 	padding-top: 300px;
 }
+.carousel-inner img {
+  border-radius: 20px;
+}
+img {
+ border-radius: 5px;
+}
