Overlay on images

--- a/css/wolfestyle.css
+++ b/css/wolfestyle.css
@@ -202,3 +202,14 @@ only screen and (max-width: 760px),
 img {
  border-radius: 5px;
 }
+
+.carousel-item:after {
+  content:"";
+  display:block;
+  position:absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  background:rgba(0,0,0,0.7);
+}
