--- a/css/wolfestyle.css
+++ b/css/wolfestyle.css
@@ -65,13 +65,13 @@ table.tournament input[type="checkbox"]{
 
 
 @media print {
-	#navbarContent{ //should remove header bar, but it does not work
+	.navbar-toggler{
 		display:none;
 	}
-	div.navbar-collapse{ //should remove header bar, but it does not work
+	.navbar-collapse{
 		display:none;
 	}
-	#tournamentTeamCopy{
+	.noPrint{
 		display:none;
 	}
 	table.tournament tbody tr td {
@@ -85,7 +85,10 @@ table.tournament input[type="checkbox"]{
 	table.tournament thead th {
 	  border: solid 1px rgba(0, 0, 0, 1);
 	}
-
+	table.tournament thead td {
+		max-height:fit-content;
+		overflow:visible;
+	}
 	header img{
 		display:none;
 	}
